@@ -1,5 +1,5 @@
 from django.contrib import admin
-from control.models import SidebarLink, ContentBlock
+from control.models import SidebarLink, ContentBlock, Services
 
 
 class SidebarLinkAdmin(admin.ModelAdmin):
@@ -16,5 +16,18 @@ class ContentBlockAdmin(admin.ModelAdmin):
             '/static/js/tinymce_setup.js',
         ]
 
+
+class ServicesAdmin(admin.ModelAdmin):
+    list_display = ('title', 'desc', 'slug', 'content')
+    prepopulated_fields = {"slug": ("title",)}
+    
+    class Media:
+        js = [
+            '/static/tiny_mce/tiny_mce.js',
+            '/static/js/tinymce_setup.js',
+        ]        
+
+
+admin.site.register(Services, ServicesAdmin)
 admin.site.register(SidebarLink, SidebarLinkAdmin)
 admin.site.register(ContentBlock, ContentBlockAdmin)
