@@ -14,3 +14,16 @@ class ContentBlock(models.Model):
                                 help_text="uniq block id (about_us, contatcs etc)")
     title = models.CharField(max_length=160, blank=True, help_text="title")
     content = models.TextField(blank=True, help_text="content")
+
+
+class Services(models.Model):
+    """ Services """
+    title = models.CharField(max_length=160)
+    desc = models.CharField(max_length=255, blank=True)
+
+    slug = models.SlugField()
+    content = models.TextField(blank=True)
+
+    class Meta:
+        verbose_name = "Service"
+        verbose_name_plural = "Services"
